--- a/Day 1/Im.htm
+++ b/Day 1/Im.htm
@@ -14,6 +14,14 @@
     <audio controls>
         <source src="oceanwave.mp3" type="audio/mpeg">
     </audio>
+    <div>
+        <p>
+            ArrayList is a part of collection framework and is present in <b>java.util</b> package. 
+            It provides us with dynamic arrays in Java. Though, it may be slower than standard 
+            arrays but can be helpful in programs where lots of manipulation in the array is needed. 
+            This class is found in java.util package.
+        </p>
+    </div>
 </head>
 <body>
     
